--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                 <a href="photos.html" class="nav-item nav-link">Photos</a>
                                 <a href="family.html" class="nav-item nav-link">Family & Friends</a>
                                 <a href="trips.html" class="nav-item nav-link">Trips</a>
-                                
+                                <a href="contact.html" class="nav-item nav-link">Contact</a>
                             </div>
                             
                         </div>
