--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
       </div>
 
       <div class="form-group">
-        <label for="latsName">Last Name</label>
+        <label for="lastName">Last Name</label>
         <input type="text" id="lastName" name="lastName">
       </div>
 
@@ -95,7 +95,7 @@
       </div>
 
       <div class="form-group">
-        <label for="massage">Massage</label>
+        <label for="message">Message</label>
         <textarea name="massage" id="massage" cols="30" rows="10"></textarea>
       </div>
 
