Changes according to review

--- a/blog.html
+++ b/blog.html
@@ -42,7 +42,7 @@
 
                         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                             <div class="navbar-nav mr-auto">
-                                <a href="index.html" class="nav-item nav-link active">Home</a>
+                                <a href="index.html" class="nav-item nav-link ">Home</a>
                                 <a href="blog.html" class="nav-item nav-link">Blog</a>
                                 <a href="photos.html" class="nav-item nav-link">Photos</a>
                                 <a href="family.html" class="nav-item nav-link">Family & Friends</a>
@@ -78,7 +78,7 @@
                             
                             <div class="about-text">
                                 <p>
-              Hello guys! My name is Harman, welcome to my life! In this website I will be sharing my life. Im currently a senior at Guilford College, My major is Biology with an intergraded science minor. My goal is to go to physical therapy school and become a physical therapist. Some of my favorite things to do when I’m not doing school assignments is playing video games , playing volleyball, and hanging out with family or friends.  I have a younger brother, we are bestfriends, we mostly talk about basketball or video games.
+              Hello guys! My name is Harman, welcome to my life! In this website I will be sharing my life. Im currently a senior at Guilford College, My major is Biology with an integrated science minor. My goal is to go to physical therapy school and become a physical therapist. Some of my favorite things to do when I’m not doing school assignments is playing video games , playing volleyball, and hanging out with family or friends.  I have a younger brother, we are bestfriends, we mostly talk about basketball or video games.
 
           </p>
 
