--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 
                         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                             <div class="navbar-nav mr-auto">
-                                <a href="index.html" class="nav-item nav-link active">Home</a>
+                                <a href="index.html" class="nav-item nav-link ">Home</a>
                                 <a href="blog.html" class="nav-item nav-link">Blog</a>
                                 <a href="photos.html" class="nav-item nav-link">Photos</a>
                                 <a href="family.html" class="nav-item nav-link">Family & Friends</a>
@@ -87,7 +87,7 @@
 
       <div class="form-group">
         <label for="message">Message</label>
-        <textarea name="massage" id="massage" cols="30" rows="10"></textarea>
+        <textarea name="message" id="message" cols="30" rows="10"></textarea>
       </div>
 
       <button type="submit">Submit</button>
