--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
                         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                             <div class="navbar-nav mr-auto">
-                                <a href="index.html" class="nav-item nav-link active">Home</a>
+                                <a href="index.html" class="nav-item nav-link">Home</a>
                                 <a href="blog.html" class="nav-item nav-link">Blog</a>
                                 <a href="photos.html" class="nav-item nav-link">Photos</a>
                                 <a href="family.html" class="nav-item nav-link">Family & Friends</a>
